public interface Notificacion {

    void enviar(String mensaje);
}